# vesuvius

./: Cargo.toml  README.md  rust-toolchain.toml
assets/pipelines/: draw.json  image.json  msdf_font.json  position_color.json  position_texcoord.json  triangle.json
assets/resources/fonts/roboto-thin/: atlas.json
assets/shader/: draw.fragment.glsl  draw.vertex.glsl  image.fragment.glsl  msdf_font.fragment.glsl  position_color.vertex.glsl  position_tex_color.vertex.glsl  position_texcoord.vertex.glsl  triangle.fragment.glsl  triangle.vertex.glsl
crates/vesuvius-engine/: Cargo.toml
crates/vesuvius-engine/src/: device.rs  error.rs  lib.rs  screen.rs
crates/vesuvius-engine/src/debug/: mod.rs
crates/vesuvius-engine/src/render/: buffer.rs  image.rs  mod.rs
crates/vesuvius-engine/src/render/buffer/: builder.rs  format.rs  mod.rs
crates/vesuvius-engine/src/render/pipeline/: config.rs  mod.rs  shader.rs
crates/vesuvius-engine/src/render/text/: config.rs  mod.rs
crates/vesuvius-game/: Cargo.toml
crates/vesuvius-game/src/: main.rs  screens.rs
src/: main.rs
src/game/: device.rs  error.rs  mod.rs
src/game/render/: mod.rs  pipeline.rs  shader.rs
src/game/screen/: mod.rs
